Fix CSS centers overflowing viewport

--- a/web-client/src/components/App/App.scss
+++ b/web-client/src/components/App/App.scss
@@ -13,4 +13,8 @@
 
 :root, body { height: 100%; }
 
-#root { min-height: 100%; }
+#root {
+    // Horizontally and vertically center children by default
+    @include center-flex;
+    min-height: 100%;
+}
