--- a/web-client/src/components/App/Loading/Loading.scss
+++ b/web-client/src/components/App/Loading/Loading.scss
@@ -1,7 +1,6 @@
 @import "~styles/common";
 
 .Loading {
-    @include center;
     @include desktop { font-size: 2em; }
     @include phone { font-size: 1.4em; }
     color: $header-color;
